2005-04-21  David Vrabel  <dvrabel@arcom.com>

	* src/i386.ld: Add .2ram section.

2005-04-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/hal_i386.cdl: 
	* src/redboot_linux_exec.c: Moved the RedBoot command "exec" from 
	the pc package to this generic package.

2005-03-21  Bart Veer  <bartv@ecoscentric.com>

	* src/vectors.S, src/hal_misc.c, cdl/hal_i386.cdl: add profiling
	support.

2004-04-22  Jani Monoses <jani@iv.ro>

	 * cdl/hal_i386.cdl :
	 Invoke tail with stricter syntax that works in latest coreutils. 

2003-12-08  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_misc.c: Only declare __mem_fault_handler if GDB stubs
	are included (and it will be used).

2003-07-23  Nick Garnett  <nickg@balti.calivar.com>

	* include/hal_intr.h: Tidied up some compiler warnings.

2003-04-10  Nick Garnett  <nickg@balti.calivar.com>

	* src/i386.ld:
	Added libsupc++.a to GROUP() directive for GCC versions later than
	3.0.

2003-01-31  Mark Salter  <msalter@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Let generic syscall code
	handle exit.

2002-11-28  Nick Garnett  <nickg@ecoscentric.com>

	* src/vectors.S: Added GRUB startup option to tests for IDT
	initialization. Added call to breakpoint() before cyg_start(),
	controlled by CYGDBG_HAL_DEBUG_GDB_INITIAL_BREAK.

2002-05-17  Nick Garnett  <nickg@redhat.com>

	* src/vectors.S: Rearranged interrupt stack definitions to make it
	work correctly in SMP case. The #ifdefs were improperly nested.

2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>

	* src/vectors.S:
	Don't use .file as it can confuse debugging since the .file
	doesn't contain the path and therefore the debugger will never
	know where it lives! This conflicts with using -Wa,--gstabs.

2002-04-15  Jonathan Larmour  <jlarmour@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Add extra sig argument to
	__do_syscall.

2002-01-08  Nick Garnett  <nickg@redhat.com>

	* include/hal_arch.h:
	Removed consideration of lazy FPU context switching in determining